-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 8-shenandoah, 11, 17, 18, 19
-
Component/s: hotspot
-
b08
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8311484 | 17.0.9 | Aleksey Shipilev | P2 | Resolved | Fixed | b01 |
Following tests failed in nightly test.
java/foreign/TestUpcall_async.java
java/foreign/TestDowncall.java
java/foreign/TestUpcall_scope.java
java/foreign/TestMemoryHandleAsUnsigned.java
java/foreign/loaderLookup/TestLoaderLookup.java
java/lang/invoke/MethodHandlesGeneralTest.java
# Internal Error (/home/jenkins/workspace/nightly/jdk-jdk/src/hotspot/share/opto/escape.cpp:3333), pid=13910, tid=13951
# assert(false) failed: EA: missing allocation reference path
#
# JRE version: OpenJDK Runtime Environment (19.0) (fastdebug build 19-internal+0-adhoc.jenkins.jdk-jdk)
# Java VM: OpenJDK 64-Bit Server VM (fastdebug 19-internal+0-adhoc.jenkins.jdk-jdk, mixed mode, sharing, tiered, compressed oops, compressed class ptrs,
shenandoah gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0xb1d444] ConnectionGraph::split_unique_types(GrowableArray<Node*>&, GrowableArray<ArrayCopyNode*>&, GrowableArray<MergeMemNode*>&)+0xed
java/foreign/TestUpcall_async.java
java/foreign/TestDowncall.java
java/foreign/TestUpcall_scope.java
java/foreign/TestMemoryHandleAsUnsigned.java
java/foreign/loaderLookup/TestLoaderLookup.java
java/lang/invoke/MethodHandlesGeneralTest.java
# Internal Error (/home/jenkins/workspace/nightly/jdk-jdk/src/hotspot/share/opto/escape.cpp:3333), pid=13910, tid=13951
# assert(false) failed: EA: missing allocation reference path
#
# JRE version: OpenJDK Runtime Environment (19.0) (fastdebug build 19-internal+0-adhoc.jenkins.jdk-jdk)
# Java VM: OpenJDK 64-Bit Server VM (fastdebug 19-internal+0-adhoc.jenkins.jdk-jdk, mixed mode, sharing, tiered, compressed oops, compressed class ptrs,
shenandoah gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0xb1d444] ConnectionGraph::split_unique_types(GrowableArray<Node*>&, GrowableArray<ArrayCopyNode*>&, GrowableArray<MergeMemNode*>&)+0xed
- backported by
-
JDK-8311484 Shenandoah: Some tests failed with "EA: missing allocation reference path"
-
- Resolved
-