8280885: Shenandoah: Some tests failed with "EA: missing allocation reference path"

Backport-of: ab638341de164965e06bb1d59808670260916b82